--- a/catalogo/static/style/dstyle.css
+++ b/catalogo/static/style/dstyle.css
@@ -224,11 +224,11 @@ nav{
     transform: translateY(-5px);
 }
 
-/* .libro-imagen img {
+.libro-imagen img {
     width: 100%;
-    height: 1px;
+    height: 500px;
     display: block;
-} */
+}
 
 .libro-info {
     padding: 15px;
