--- a/catalogo/static/style/style.css
+++ b/catalogo/static/style/style.css
@@ -231,9 +231,9 @@ header .fa-bars{
     transform: translateY(-5px);
 }
 
-/* .libro-imagen img {
+/* .libro-imagen {
     width: 100%;
-    height: 300px;
+    height: 100px;
     display: block;
 } */
 
