--- a/catalogo/templates/profile.html
+++ b/catalogo/templates/profile.html
@@ -10,8 +10,12 @@
     <style>
         body, .font-poppins { font-family: 'Poppins', sans-serif; }
         .favorito-img { width: 150px; height: 450px; object-fit: cover; }
-
-        
+        .transition-transform {
+            transition: transform 0.2s ease-in-out; 
+        }
+        .transition-transform:hover {
+            transform: translateY(-5px);
+        }
     </style>
 {% endblock %}
 
@@ -30,13 +34,15 @@
         <div class="col-lg-4 col-md-6 col-12 mb-4">
             <div class="card shadow text-center">
                 <div class="card-body">
-                    {% comment %} <div class="mb-3">
-                        <img src="{% static 'User_img/489948073_10236340187474647_6526225655919352765_n.jpg' %}" alt="Sol" class="rounded-circle shadow" style="width:120px; height:120px; object-fit:cover;">
-                    </div> {% endcomment %}
+
+                    
+                    {% if request.user|has_group:"Bibliotecario" %}
+                        <span class="bg-warning text-dark ms-2 border rounded px-2 py-1 ">Perfil de Bibliotecario</span>
+                    {% endif %}
+                                     
                     <h2 class="fw-bold mb-2">{{ perfil.nombre }} {{ perfil.apellido }}</h2>
-                    <div class="mb-3">
-                        <a href="{% url 'singout' %}" class="btn btn-danger">Cerrar Sesión</a>
-                    </div>
+                    
+                   
                     <ul class="list-group mb-4 text-start">
                         <li class="list-group-item"><strong>SABERES:</strong> {{ perfil.saber }}</li>
                         <li class="list-group-item"><strong>Edad:</strong> {{ perfil.edad }}</li>
@@ -46,26 +52,125 @@
                     </ul>
                     {% if request.user|has_group:"Bibliotecario" %}
                     <!-- Botón para abrir el modal -->
-                    <button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#buscarUsuarioModal">
-                        Buscar usuario
-                    </button>
+                    <div class="d-flex align-items-center mb-2 gap-2">
+                        <h5 class="card-title mb-0">Modificar Saberes</h5>
+                        <button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#buscarUsuarioModal">
+                            Buscar usuario
+                        </button>
+                    </div>
+                    <div class="d-flex align-items-center mb-2 gap-2">
+                        <h5 class="card-title mb-0">Administrar Generos</h5>
+                        <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target="#generosModal">
+                            Administrar géneros
+                        </button>
+                    </div>
+                    
+                    <!-- Modal de administración de géneros -->
+                    <div class="modal fade" id="generosModal" tabindex="-1" aria-labelledby="generosModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="generosModalLabel">Administrar géneros</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                        </div>
+                        <div class="modal-body">
+                            <!-- Selector de géneros -->
+                            <form id="genero-form" method="post">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="generoSelect" class="form-label">Selecciona un género:</label>
+                               <select class="form-select" id="generoSelect" name="genero_id" required>
+                                    <option value="" selected disabled>Elige un género</option>
+                                    {% for genero in Generos %}
+                                        <option value="{{ genero.id }}">{{ genero.genero }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="d-flex gap-2 mb-3">
+                                <!-- Botón Editar -->
+                                <button type="button" class="btn btn-success btn-sm" id="editarGeneroBtn" disabled data-bs-toggle="modal" data-bs-target="#editarGeneroModal">
+                                Editar
+                                </button>
+                                <!-- Botón Eliminar -->
+                                <button type="submit" formaction="{% url 'eliminar_genero' 0 %}" class="btn btn-danger btn-sm" id="eliminarGeneroBtn" disabled onclick="return confirm('¿Seguro que deseas eliminar este género?');">
+                                Eliminar
+                                </button>
+                            </div>
+                            </form>
+                            <!-- Formulario para agregar nuevo género -->
+                            <form method="post" action="{% url 'agregar_genero' %}" class="mt-3">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input type="text" name="genero" class="form-control" placeholder="Nuevo género" required>
+                                    <button class="btn btn-primary" type="submit">Guardar nuevo género</button>
+                                </div>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+
+                    <!-- Modal para editar género -->
+                    <div class="modal fade" id="editarGeneroModal" tabindex="-1" aria-labelledby="editarGeneroModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <form method="post" id="editarGeneroForm">
+                            {% csrf_token %}
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="editarGeneroModalLabel">Editar género</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                            </div>
+                            <div class="modal-body">
+                            <input type="hidden" name="genero_id" id="editGeneroId">
+                            <div class="mb-3">
+                                <label for="editGeneroNombre" class="form-label">Nuevo nombre:</label>
+                                <input type="text" class="form-control" name="nombre" id="editGeneroNombre" required>
+                            </div>
+                            </div>
+                            <div class="modal-footer">
+                            <button type="submit" formaction="" class="btn btn-success">Guardar cambios</button>
+                            </div>
+                        </form>
+                        </div>
+                    </div>
+                    </div>
                     {% endif %}
+                    {% if request.user|has_group:"Bibliotecario" %}
+                        <div class="card my-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Enviar mensaje a todos los usuarios</h5>
+                                <form method="post" action="{% url 'enviar_mensaje_todos' %}">
+                                    {% csrf_token %}
+                                    <div class="mb-3">
+                                        <textarea class="form-control" name="mensaje" rows="4" placeholder="Escribe el mensaje aquí..." required></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Enviar a todos</button>
+                                </form>
+                                {% if mensaje_enviado %}
+                                    <div class="alert alert-success mt-2">¡Mensaje enviado a todos los correos!</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
+                    <div class="mb-3">
+                        <a href="{% url 'singout' %}" class="btn btn-danger">Cerrar Sesión</a>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- Columna derecha: Favoritos -->
-        <div class="col-lg-8 col-12">
+        <div class="col-lg-8 col-0">
             <div class="card shadow">
-                <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">Libros Favoritos</h4>
+                <div class=" card-header bg-warning text-black">
+                    <h4 class="mb-0 text-center">Libros Favoritos</h4>
                 </div>
-                <div class="card-body">
-                    <div class="row g-4">
+                <div class="card-body ">
+                    <div class="row g-4 ">
                         {% for libro in perfil.favoritos.all %}
-                        <div class="col-md-4 col-sm-1 col-1">
-                            <div class="card h-100">
+                        <div class="col-md-4 col-sm-1 col-1 transform">
+                            <div class="card h-100 transition-transform">
                                 <img src="{{ libro.portada.url }}" alt="Portada de {{ libro.nombre_libro }}" class="card-img-top favorito-img">
-                                <div class="card-body">
+                                <div class="card-body text-center">
                                     <h5 class="card-title">{{ libro.nombre_libro }}</h5>
                                     <p class="card-text mb-1"><strong>Autor:</strong> {{ libro.autor }}</p>
                                     <p class="card-text mb-1"><strong>Género:</strong> {{ libro.genero }}</p>
@@ -140,6 +245,8 @@
 </div>
 {% endif %}
 
+
+
 {% if usuarios_encontrados or busqueda_realizada %}
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -148,4 +255,32 @@
     });
 </script>
 {% endif %}
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const generoSelect = document.getElementById('generoSelect');
+    const editarBtn = document.getElementById('editarGeneroBtn');
+    const eliminarBtn = document.getElementById('eliminarGeneroBtn');
+    const editGeneroId = document.getElementById('editGeneroId');
+    const editGeneroNombre = document.getElementById('editGeneroNombre');
+    const editarGeneroForm = document.getElementById('editarGeneroForm');
+
+    if (generoSelect) {
+        generoSelect.addEventListener('change', function() {
+            const generoId = generoSelect.value;
+            editarBtn.disabled = !generoId;
+            eliminarBtn.disabled = !generoId;
+            eliminarBtn.setAttribute('formaction', `/eliminar_genero/${generoId}/`);
+        });
+
+        // Cuando se hace click en "Editar", pasa los datos al modal
+        editarBtn.addEventListener('click', function() {
+            const generoId = generoSelect.value;
+            const generoNombre = generoSelect.options[generoSelect.selectedIndex].text;
+            editGeneroId.value = generoId;
+            editGeneroNombre.value = generoNombre;
+            editarGeneroForm.setAttribute('action', `/editar_genero/${generoId}/`);
+        });
+    }
+});
+</script>
 {% endblock content %}
