--- a/catalogo/templates/profile.html
+++ b/catalogo/templates/profile.html
@@ -49,7 +49,9 @@
                         <li class="list-group-item"><strong>Dirección:</strong> {{ perfil.direccion }}</li>
                         <li class="list-group-item"><strong>Barrio:</strong> {{ perfil.barrio }}</li>
                         <li class="list-group-item"><strong>Teléfono:</strong> {{ perfil.telefono }}</li>
+                        <li class="list-group-item"><strong>Email:</strong> {{ user.email }}</li>
                     </ul>
+                    <a href="{% url 'editar_perfil' %}" class="btn btn-outline-primary btn-sm mb-2">Editar mis datos</a>
                     {% if request.user|has_group:"Bibliotecario" %}
                     <!-- Botón para abrir el modal -->
                     <div class="d-flex align-items-center mb-2 gap-2">
